[package]
name = "nae"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.5.6"
rustop = "1.1.2"
chrono = "0.4.6"
serde = "1.0.83"

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.36.1"
features = [
  "Win32_Security",
  "Win32_Foundation",
  "Win32_Storage_FileSystem",
  "Win32_System_WindowsProgramming",
]

[lib]
doctest = false
