[package]
name = "nae"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "*"
rustop = "*"
chrono = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"

[target.'cfg(windows)'.dependencies.windows-sys]
version = "*"
features = [
  "Win32_Security",
  "Win32_Foundation",
  "Win32_Storage_FileSystem",
  "Win32_System_WindowsProgramming",
]

[lib]
doctest = false
