[package]
name = "nae"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.10"
rustop = "1.1"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.59.0"
features = [
  "Win32_Security",
  "Win32_Foundation",
  "Win32_Storage_FileSystem",
  "Win32_System_WindowsProgramming",
]

[dev-dependencies]
anyhow = "1.0"
assert_cmd = "2.0"

[lib]
doctest = false

[profile.release]
opt-level = 3
lto = true
strip = true
